// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works: error 1`] = `
<div>
  <h1>
    Actions
  </h1>
  <button
    onClick={[Function]}
  >
    Retry
  </button>
  Oh, snap!
</div>
`;

exports[`it works: fetching 1`] = `
<div>
  <h1>
    Actions
  </h1>
  Loading...
</div>
`;

exports[`it works: idle 1`] = `
<div>
  <h1>
    Actions
  </h1>
  <button
    onClick={[Function]}
  >
    Fetch
  </button>
</div>
`;

exports[`it works: success 1`] = `
<div>
  <h1>
    Actions
  </h1>
  <ul>
    <li>
      GIST1
    </li>
    <li>
      GIST2
    </li>
  </ul>
</div>
`;
